[project]
name = "cyclic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darts>=0.36.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "selenium>=4.34.0",
]
